# compiler-simulator

./: .gitignore  .pre-commit-config.yaml  README.md  entregable.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
compiler/: __init__.py  ast.py  cli.py  codegen.py  diagnostics.py  lexer.py  optimizer.py  parser.py  pipeline.py  semantic.py  tac.py
tests/: test_lexer.py  test_parser.py  test_pipeline.py  test_semantic.py
