[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compiler-simulator"
version = "0.1.0"
description = "Compiler pipeline simulator for lexer/parser/semantic/TAC/codegen/optimization."
requires-python = ">=3.10"
readme = "entregable.md"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "black>=24.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "nox>=2024.4.15",
]

[project.scripts]
compiler-sim = "compiler.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=compiler --cov-report=term-missing"
